# SSARE

./: .dockerignore  .env.example  .gitattributes  .gitignore  2docker-compose.yml  CBMifGh0dHBzOi8vd3d3Lm1lcmt1ci5kZS9sZWJlbi9nZW51c3MvZGlhYmV0ZXMtYmFsbGFzdHN0b2ZmZS1wb3JyaWRnZS1oYWZlcmt1ci1hYm5laG1lbi1oYWZlcnRhZ2UtaGFmZXJmbG9ja2VuLXpyLTkyODUwODIzLmh0bWzSAQA?oc=5  README.md  all.txt  article_display.html  articles.html  boot.sh  buildpush.sh  compose.traefik.yml  copy_all.py  copy_mains.py  docker-compose.local.yml  docker-compose.yml  full.py  go.sh  log_full_run_280124.txt  mains.txt  notes.py  package-lock.json  qcheck.py  qdrant.sh  requirements.txt  resolve_location_entities.py  restart.sh  tailwind.config.js  test_apis.py
.deployment/: README.md
.deployment/opol-cluster-chart/: values.yaml
.github/workflows/: ci-cd.yml  publish.yml
OPOL/api-client/: pyproject.toml  setup.cfg
OPOL/app/: Dockerfile  main.py  requirements.txt
OPOL/classification-service/: Dockerfile
OPOL/core/: adb.py  classification_models.py  models.py  utils.py
OPOL/embedding-service/: requirements.txt
OPOL/entity-service/: Dockerfile
OPOL/geo-service/: Dockerfile
OPOL/images/: RayBase.Dockerfile
SSARE/: tailwind.config.js
SSARE/api-client/: LICENSE  README.md  main.py  prototype.ipynb  pyproject.toml  setup.cfg
SSARE/api-client/api/: classification.py  client_base.py
SSARE/api-client/opol/: main.py
SSARE/api-client/opol.egg-info/: PKG-INFO  SOURCES.txt
SSARE/api-client/opol/api/: articles.py  client_base.py
SSARE/api-client/opol/opol.egg-info/: PKG-INFO  SOURCES.txt
SSARE/app/: main.py  (+6 more)
SSARE/rag_service/: Dockerfile  main.py  pyproject.toml  r2rkgtest.py  requirements.txt
data/: config.ini  scraper_config.json
flows/: orchestration.py
helm/: Chart.yaml  values.yaml
opol/: README.md
opol/python-client/: .gitignore  autoincr.sh  autopush.sh  map.html  prototype.ipynb  pyproject.toml  setup.cfg  testing.py
opol/python-client/opol/: __init__.py  main.py
opol/python-client/opol.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
opol/python-client/opol/api/: __init__.py  articles.py  classification.py  client_base.py  economic.py  embeddings.py  entities.py  fastclass.py  geo.py  geojson.py  legislation.py  scraping.py  search.py  url_strategy.py
opol/python-client/opol/api/models/: __init__.py  searxng.py
z_dev_scripts/: api_bridge.py  api_playground.py  call4country.py  config.json  configure_kg.py  copy_all.py  copy_mains.py  entities_ranking.py  first_bootup.sh  k2gtest_old.py  notes.txt  peliasplaceholdergeocoding.py  qdrant_test.py  r2rkgtest.py  ranker_test.py  response.json  response_json.json  router_test.py  securityaffairstest.py  testliteollama.py
z_test_api_calls/: embedd_articles.py  full.py  scrape articles.py
(+1715 files in other folders)
