# setup.cfg
[metadata]
name = opol
version = 0.1.0
author = Jim Vincent Wagner
author_email = jimvw@open-politics.org
description = Main API client to interact with all SSARE services.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/open-politics/ssare
project_urls =
    Bug Tracker = https://github.com/open-politics/ssare/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    requests
    pydantic

[options.packages.find]
where = .