[tool.poetry]
name = "rag-service"
version = "0.1.0"
description = ""
authors = ["JimVincentw <jimvwagner@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlmodel = "^0.0.19"
fastapi = ">=0.109.2,<0.110.0"
r2r = {version = "^0.2.49", python = ">=3.10,<3.13"}
uvicorn = "0.27.0.post1"

[tool.poetry.group.dev.dependencies]
fastapi = ">=0.109.2,<0.110.0"
sqlmodel = "^0.0.19"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
