[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opol"
version = "0.1.10"
description = "Main API client to interact with all OPOL services."
authors = [
    { name = "Jim Vincent Wagner", email = "jimvw@open-politics.org" }
]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "requests",
    "pydantic"
]

# Add these sections to define the dynamic fields
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

urls = { "Bug Tracker" = "https://github.com/open-politics/opol/issues" }

requires-python = ">=3.10"