# setup.cfg
[metadata]
name = opol
version = 0.1.26
author = Jim Vincent Wagner
author_email = jimvw@open-politics.org
description = Main API client to interact with all opol services.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/open-politics/opol
project_urls =
    Bug Tracker = https://github.com/open-politics/opol/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]   
packages = find:
python_requires = >=3.10
install_requires =
    requests
    pydantic
    google-generativeai
    instructor

[options.packages.find]
where = .